hphp/hack/test/typecheck/expression_trees/ternary.php.like_types.exp
File "ternary.php", line 6, characters 13-16:
Typing error (Typing[4110])
  File "ternary.php", line 6, characters 13-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 29, characters 5-43:
  But got `dynamic` because it is an unenforceable type
File "ternary.php", line 6, characters 20-20:
Typing error (Typing[4110])
  File "ternary.php", line 6, characters 20-20:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "ternary.php", line 6, characters 24-30:
Typing error (Typing[4110])
  File "ternary.php", line 6, characters 24-30:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 34, characters 5-45:
  But got `dynamic` because it is an unenforceable type
